--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-axios": "^0.17.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-element-dropdown": "^2.3.1",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-paper": "^4.12.5",
+    "react-native-reanimated": "^3.4.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
